# news-event-trigger

./: .env.template  .gitignore  CLAUDE.md  README.md  config.json  pyproject.toml
.github/workflows/: main.yml
src/: classifier.py  config.py  follow_redirects.py  main.py  notifier.py  rss.py
tests/: eval_classifier.py  test_follow_redirects.py  test_notifier.py
